@@ -368,13 +368,12 @@ public class DecimateHalfEdge extends AbstractAlgoHalfEdge
 	public void postProcessAllHalfEdges()
 	{
 		int cnt = 0;
-		HalfEdge edge = (HalfEdge) tree.first();
-		while (edge != null)
+		for (Iterator itt = tree.iterator(); itt.hasNext(); )
 		{
+			HalfEdge edge = (HalfEdge) itt.next();
 			if (tree.getKey(edge) > tolerance)
 				break;
 			cnt++;
-			edge = (HalfEdge) tree.next();
 		}
 		logger.info("Number of contracted edges: "+processed);
 		logger.info("Total number of edges not contracted during processing: "+cntNotProcessed);
